--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					<nav class="nav">
 						<ul class="nav-wrapper">
 							<li class="nav-wrapper_item">
-								<a class="nav-wrapper_item-link nav-wrapper_item-link--active" href="#">Home</a>
+								<a class="nav-wrapper_item-link nav-wrapper_item-link--active" href="#" aria-label="Home">Home</a>
 							</li>
 							<li class="nav-wrapper_item">
 								<a class="nav-wrapper_item-link" href="#" aria-label="blog">Blog</a>
@@ -94,7 +94,7 @@
 						gubergren similique est cu. Et vel modus congue vituperata.
 					</div>
 					<div class="play-wrapper">
-						<a href="#">
+						<a href="#" aria-label="play">
 							<i class="play">
 								<svg width="7" height="8" viewBox="0 0 7 8" fill="none"
 									xmlns="http://www.w3.org/2000/svg">
@@ -141,14 +141,14 @@
 					mollis oporteat. Eum an expetenda consequat.
 				</div>
 				<div class="btn-group">
-					<a href="#" class="btn btn--one">View video
+					<a href="#" class="btn btn--one" aria-label="View video">View video
 						<svg width="7" height="8" viewBox="0 0 7 8" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path
 								d="M6 2.73354C6.66667 3.11844 6.66667 4.08069 6 4.46559L1.5 7.06367C0.833333 7.44857 0 6.96744 0 6.19764V1.00149C0 0.231691 0.833333 -0.249434 1.5 0.135467L6 2.73354Z"
 								fill="#fff" />
 						</svg>
 					</a>
-					<a href="#" class="btn btn--two">See features</a>
+					<a href="#" class="btn btn--two" aria-label="See features">See features</a>
 				</div>
 			</div>
 		</div>
@@ -186,9 +186,9 @@
 				</li>
 			</ul>
 			<div class="btns">
-				<a href="#" class="btn btn--danger">Read more</a>
+				<a href="#" class="btn btn--danger" aria-label="Read more">Read more</a>
 				<span class="block-or">OR</span>
-				<a href="#" class="btn btn--primary">Get started</a>
+				<a href="#" class="btn btn--primary" aria-label="Get started">Get started</a>
 			</div>
 		</div>
 	</section>
@@ -233,9 +233,9 @@
 								persecuti. Natum petentium principes mei ea. Tota everti periculis vis ei, quas tibique
 								pro at, eos ut decore ...</div>
 							<div class="btn-group">
-								<a href="#" class="btn btn--primary">Read now
+								<a href="#" class="btn btn--primary" aria-label="Read now">Read now
 								</a>
-								<a href="#" class="btn btn--two">Add to your bookmarks</a>
+								<a href="#" class="btn btn--two" aria-label="Add to your bookmarks">Add to your bookmarks</a>
 							</div>
 						</div>
 					</li>
@@ -303,7 +303,7 @@
 						<div class="faq-accordion_item-content-text">Quidam vocibus eum ne, erat consectetuer
 							voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret
 							persecuti.</div>
-						<div class="faq-accordion_item-content-btn"><a href="#" class="btn btn--faq">Go to documentation
+						<div class="faq-accordion_item-content-btn"><a href="#" class="btn btn--faq" aria-label="Go to documentation">Go to documentation
 							</a></div>
 					</div>
 				</li>
@@ -323,7 +323,7 @@
 						<div class="faq-accordion_item-content-text">Quidam vocibus eum ne, erat consectetuer
 							voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret
 							persecuti.</div>
-						<div class="faq-accordion_item-content-btn"><a href="#" class="btn btn--faq">Go to documentation
+						<div class="faq-accordion_item-content-btn"><a href="#" class="btn btn--faq" aria-label="Go to documentation">Go to documentation
 							</a></div>
 					</div>
 				</li>
@@ -361,7 +361,7 @@
 						<div class="faq-accordion_item-content-text">Quidam vocibus eum ne, erat consectetuer
 							voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret
 							persecuti.</div>
-						<div class="faq-accordion_item-content-btn"><a href="#" class="btn btn--faq">Go to documentation
+						<div class="faq-accordion_item-content-btn"><a href="#" class="btn btn--faq" aria-label="Go to documentation">Go to documentation
 							</a></div>
 					</div>
 				</li>
@@ -401,7 +401,7 @@
 						<div class="faq-accordion_item-content-text">Quidam vocibus eum ne, erat consectetuer
 							voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret
 							persecuti.</div>
-						<div class="faq-accordion_item-content-btn"><a href="#" class="btn btn--faq">Go to documentation
+						<div class="faq-accordion_item-content-btn"><a href="#" class="btn btn--faq" aria-label="Go to documentation">Go to documentation
 							</a></div>
 					</div>
 				</li>
@@ -419,8 +419,8 @@
 				similique est cu. Et vel modus congue vituperata.
 			</div>
 			<div class="btn-group">
-				<a href="#" class="btn btn--one">View pricing</a>
-				<a href="#" class="btn btn--two">Read documentation</a>
+				<a href="#" class="btn btn--one" aria-label="View pricing">View pricing</a>
+				<a href="#" class="btn btn--two" aria-label="Read documentation">Read documentation</a>
 			</div>
 		</div>
 	</section>
@@ -437,7 +437,7 @@
 			<div class="newsletter-right">
 				<div class="btn-group">
 					<input type="text" href="#" class="input-area" placeholder="Email address" aria-label="Email"/>
-					<a href="#" class="btn btn--one">Save me</a>
+					<a href="#" class="btn btn--one" aria-label="Save me">Save me</a>
 				</div>
 			</div>
 		</div>
@@ -447,7 +447,7 @@
 	<footer class="section-outer footer">
 		<div class="section-inner section-inner--wide padding-vertical padding-vertical-s">
 			<div class="main-navigation">
-				<a class="logo" href="#"></a>
+				<a class="logo" href="#" aria-label="logo"></a>
 				<button class="btn btn--two btn-burger">
 					<span class="btn-burger__line"></span>
 					<span class="btn-burger__line"></span>
@@ -457,7 +457,7 @@
 					<nav class="nav">
 						<ul class="nav-wrapper">
 							<li class="nav-wrapper_item">
-								<a class="nav-wrapper_item-link nav-wrapper_item-link--active" href="#">Home</a>
+								<a class="nav-wrapper_item-link nav-wrapper_item-link--active" href="#" aria-label="Home">Home</a>
 							</li>
 							<li class="nav-wrapper_item">
 								<a class="nav-wrapper_item-link" href="#" aria-label="blog">Blog</a>
@@ -506,7 +506,7 @@
 						</ul>
 					</nav>
 					<div class="btn-wrapper">
-						<a href="#" class="btn btn--primary">Get started</a>
+						<a href="#" class="btn btn--primary" aria-label="Get started">Get started</a>
 					</div>
 				</div>
 			</div>
