--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
 		<div class="section-inner section-inner--wide padding-vertical padding-vertical-s">
 			<div class="main-navigation">
 				<a class="logo" href="#" aria-label="logo"></a>
-				<button class="btn btn--two btn-burger" aria-label="Toggle">
+				<button class="btn btn--two btn-burger" name="Toggle">
 					<span class="btn-burger__line"></span>
 					<span class="btn-burger__line"></span>
 					<span class="btn-burger__line"></span>
