--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 	<!-- header -->
 	<header class="section-outer section-header">
 		<div class="section-inner section-inner--wide padding-vertical padding-vertical-s">
-			<div class="main-navigation">
+			<div class="main-navigation" id="main-navigation">
 				<a class="logo" href="#" aria-label="logo"></a>
-				<button class="btn btn--two btn-burger">
+				<button class="btn btn--two btn-burger" id="btn-burger">
 					<span class="btn-burger__line"></span>
 					<span class="btn-burger__line"></span>
 					<span class="btn-burger__line"></span>
@@ -84,9 +84,31 @@
 	</header>
 	<!-- end header -->
 	<!-- hero image -->
-	<section class="section-outer hero-image">
-		<ul class="hero-image-slider">
-			<li class="hero-image-slider_item" style="background-image:url(upload/chart.png), url(upload/clouds.png)">
+	<section class="section-outer hero-image swiper-container">
+		<ul class="hero-image-slider swiper-wrapper">
+			<li class="hero-image-slider_item swiper-slide" style="background-image:url(upload/chart.png), url(upload/clouds.png)">
+				<div class="section-inner hero-image-slider_item-content padding-vertical padding-vertical-l">
+					<h5>PLAN YOUR LIFE</h5>
+					<h2>Increase your <span>productivity</span></h2>
+					<div class="text">
+						Brute laoreet efficiendi id his, ea illum nonumes luptatum pro. Usu atqui laudem an, insolens
+						gubergren similique est cu. Et vel modus congue vituperata.
+					</div>
+					<div class="play-wrapper">
+						<a href="#" aria-label="play">
+							<i class="play">
+								<svg width="7" height="8" viewBox="0 0 7 8" fill="none"
+									xmlns="http://www.w3.org/2000/svg">
+									<path
+										d="M6 2.73354C6.66667 3.11844 6.66667 4.08069 6 4.46559L1.5 7.06367C0.833333 7.44857 0 6.96744 0 6.19764V1.00149C0 0.231691 0.833333 -0.249434 1.5 0.135467L6 2.73354Z"
+										fill="#4c85ff" />
+								</svg>
+							</i>
+						</a>
+					</div>
+				</div>
+			</li>
+			<li class="hero-image-slider_item swiper-slide" style="background-image:url(upload/chart.png), url(upload/clouds.png)">
 				<div class="section-inner hero-image-slider_item-content padding-vertical padding-vertical-l">
 					<h5>PLAN YOUR LIFE</h5>
 					<h2>Increase your <span>productivity</span></h2>
@@ -109,11 +131,7 @@
 				</div>
 			</li>
 		</ul>
-		<ul class="dots">
-			<li class="dots_item dots_item--active"></li>
-			<li class="dots_item"></li>
-			<li class="dots_item"></li>
-		</ul>
+		<div class="swiper-pagination"></div>
 	</section>
 	<!-- end hero image -->
 
@@ -213,23 +231,49 @@
 		<div class="section-inner padding-vertical padding-vertical-l">
 			<h5 class="ta-center">OUR RESOURCES</h5>
 			<h4 class="ta-center">Start reading our blog</h4>
-			<div class="slider-wrapper">
-				<ul class="blog-slider">
-					<li class="blog-slider_item">
-						<div class="blog-slider_item-gallery">
-							<div class="blog-slider_item-gallery-big">
+			<div class="slider-blog">
+			<div class="slider-blog-container swiper-container">
+				<ul class="blog-slider-wrapper swiper-wrapper">
+					<li class="blog-slider-wrapper_item swiper-slide">
+						<div class="blog-slider-wrapper_item-gallery">
+							<div class="blog-slider-wrapper_item-gallery-big">
 								<span class="loup"></span>
 							</div>
-							<div class="blog-slider_item-gallery-sm-1">
+							<div class="blog-slider-wrapper_item-gallery-sm-1">
 								<span class="loup"></span>
 							</div>
-							<div class="blog-slider_item-gallery-sm-2">
+							<div class="blog-slider-wrapper_item-gallery-sm-2">
 								<span class="loup"></span>
 							</div>
 						</div>
-						<div class="blog-slider_item-content">
+						<div class="blog-slider-wrapper_item-content">
 							<h3>How to start planning</h3>
-							<div class="blog-slider_item-content-text">Quidam vocibus eum ne, erat consectetuer
+							<div class="blog-slider-wrapper_item-content-text">Quidam vocibus eum ne, erat consectetuer
+								voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret
+								persecuti. Natum petentium principes mei ea. Tota everti periculis vis ei, quas tibique
+								pro at, eos ut decore ...</div>
+							<div class="btn-group">
+								<a href="#" class="btn btn--primary" aria-label="Read now">Read now
+								</a>
+								<a href="#" class="btn btn--two" aria-label="Add to your bookmarks">Add to your bookmarks</a>
+							</div>
+						</div>
+					</li>
+					<li class="blog-slider-wrapper_item swiper-slide">
+						<div class="blog-slider-wrapper_item-gallery">
+							<div class="blog-slider-wrapper_item-gallery-big">
+								<span class="loup"></span>
+							</div>
+							<div class="blog-slider-wrapper_item-gallery-sm-1">
+								<span class="loup"></span>
+							</div>
+							<div class="blog-slider-wrapper_item-gallery-sm-2">
+								<span class="loup"></span>
+							</div>
+						</div>
+						<div class="blog-slider-wrapper_item-content">
+							<h3>How to start planning</h3>
+							<div class="blog-slider-wrapper_item-content-text">Quidam vocibus eum ne, erat consectetuer
 								voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret
 								persecuti. Natum petentium principes mei ea. Tota everti periculis vis ei, quas tibique
 								pro at, eos ut decore ...</div>
@@ -241,15 +285,11 @@
 						</div>
 					</li>
 				</ul>
-				<a href="#" class="btn-blog btn-blog-prev" aria-label="Prev"></a>
-				<a href="#" class="btn-blog btn-blog-next" aria-label="Next"></a>
 			</div>
-			<ul class="dots">
-				<li class="dots_item dots_item--active"></li>
-				<li class="dots_item"></li>
-				<li class="dots_item"></li>
-			</ul>
-
+			<a href="#" class="btn-blog btn-blog-prev" aria-label="Prev"></a>
+				<a href="#" class="btn-blog btn-blog-next" aria-label="Next"></a>
+		</div>
+		<div class="dots"></div>
 		</div>
 	</section>
 	<!-- end blog -->
@@ -263,8 +303,33 @@
 				</div>
 			</div>
 			<div class="section-inner-right">
-				<ul class="section-inner-right-slider">
-					<li class="section-inner-right-slider-item">
+				<div class="slider-quotes-container swiper-container">
+				<ul class="section-inner-right-slider swiper-wrapper">
+					<li class="section-inner-right-slider-item swiper-slide">
+						<div class="section-inner-right-slider-item-content">Quidam vocibus eum ne, erat consectetuer
+							voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret
+							persecuti.</div>
+						<div class="section-inner-right-slider-item-photo">
+							<img class="pic" src="./upload/photo1.jpg" alt="">
+						</div>
+					</li>
+					<li class="section-inner-right-slider-item swiper-slide">
+						<div class="section-inner-right-slider-item-content">Quidam vocibus eum ne, erat consectetuer
+							voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret
+							persecuti.</div>
+						<div class="section-inner-right-slider-item-photo">
+							<img class="pic" src="./upload/photo1.jpg" alt="">
+						</div>
+					</li>
+					<li class="section-inner-right-slider-item swiper-slide">
+						<div class="section-inner-right-slider-item-content">Quidam vocibus eum ne, erat consectetuer
+							voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret
+							persecuti.</div>
+						<div class="section-inner-right-slider-item-photo">
+							<img class="pic" src="./upload/photo1.jpg" alt="">
+						</div>
+					</li>
+					<li class="section-inner-right-slider-item swiper-slide">
 						<div class="section-inner-right-slider-item-content">Quidam vocibus eum ne, erat consectetuer
 							voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret
 							persecuti.</div>
@@ -273,11 +338,8 @@
 						</div>
 					</li>
 				</ul>
-				<ul class="dots">
-					<li class="dots_item dots_item--active"></li>
-					<li class="dots_item"></li>
-					<li class="dots_item"></li>
-				</ul>
+				<div class="dots"></div>
+			</div>
 			</div>
 		</div>
 		</div>
@@ -328,7 +390,7 @@
 							</a></div>
 					</div>
 				</li>
-				<li class="faq-accordion_item faq-accordion_item--active">
+				<li class="faq-accordion_item">
 					<div class="faq-accordion_item-trigger">
 						<div class="faq-accordion_item-trigger-icon">
 							<svg width="18" height="11" viewBox="0 0 18 11" fill="none"
@@ -517,6 +579,12 @@
 		</div>
 	</footer>
 	<!-- end footer -->
+	<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css" />
+<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+
+<script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+	<script src="./js/scripts.js"></script>
 </body>
 
 </html>
